# bootstrapper_xmc

./: README.rst
software/: CMakeLists.txt  cmake_config_default.txt  relay_flash.py  xmc_flash.py
software/src/: entry.S  main.c
software/src/configs/: config.h  config_default_bootstrapper.h
